# exojit

./: .gitignore  CLAUDE.md  Makefile  README  README.md  Snakefile  TODO  TODO.txt  TODO_EXO  TODO_FFI.txt  TODO_KERNELS.txt  benchmark.csv  example.py  pyproject.toml  requirements.txt  rewrites-explained.txt  setup.py
benchmarks/: TODO  results.csv  run.py
benchmarks/kernels/: adam_exo.py  adam_neon.py  adam_numba.py  adam_numpy.py  add_exo.py  add_neon.py  add_numba.py  add_numpy.py  cross_entropy_exo.py  cross_entropy_neon.py  cross_entropy_numba.py  cross_entropy_numpy.py  dot_exo.py  dot_neon.py  dot_numba.py  dot_numpy.py  embedding_exo.py  embedding_neon.py  embedding_numba.py  embedding_numpy.py  matmul_exo.py  matmul_neon.py  matmul_numba.py  matmul_numpy.py  matvec_exo.py  matvec_neon.py  matvec_numba.py  matvec_numpy.py  relu_exo.py  relu_neon.py  relu_numba.py  relu_numpy.py  rmsnorm_exo.py  rmsnorm_neon.py  rmsnorm_numba.py  rmsnorm_numpy.py  saxpy_exo.py  saxpy_neon.py  (+10 more)
docs/: design-main.md  design-patches_intrinsics.md  design-patches_llvm.md  design-patches_llvmlite.md  ffi.txt  memref-explained.txt
examples/: debug_library.py  demo.py  inline_uv.py  vadd.mlir  vadd.py
exojit/: jitcall.c  main.py  patches_exo.py
exonp/: README  pyproject.toml
exonp/exonp/: __init__.py
experiments/: bench.py
leaderboard/: bench_exojit.py  bench_jax.py  bench_numpy.py  bench_original.py  bench_plain.py  bench_torch.py  bench_vanilla.py  original.py  run.sh  utils.py  vanilla.py
microgpt-benchmarks-game/: README  bench_exojit.py  bench_exojit_full.py  run.sh  utils.py
paper/: abstract.txt  bench.py  report.Rmd
tests/: _utils.py  conftest.py  test_e2e.py  test_ir_generation.py
tmp/: example.py
xdsl/: pyproject.toml
xdsl_exo/: __init__.py  __main__.py  backends.py  compiler.py  generator.py  main.py  patches.py  patches_intrinsics.py  patches_llvm.py  patches_llvmlite.py  rewrites.py
xnumpy/: __init__.py  jitcall.c  main.py  patches_exo.py  patches_xdsl_llvm.py  utils.py
(+133 files in other folders)
