[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "exomlir"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "exo-lang==1.0.0",
    "filecheck>=1.0.2",
    "lit>=18.1.8",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pulp<2.8",
    "pytest>=8.3.5",
    "ruff==0.11.9",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "snakemake>=9.3.4",
    "xdsl @ git+https://github.com/kaylendog/xdsl@5e799fc5062d392338f9aa9c40e9e1277286cd97",
]

[project.scripts]
exomlir = "exomlir.main:main"

[tool.setuptools.packages.find]
where = ["src"]
